# DistVsPrice

./: .gitignore  README.md  analise.ipynb  automatizador.py  lerhtml.py  lerrotas.py  main.py  malha_aerea.csv  pyproject.toml  requirements.txt  scrap.py  setup.py  voos.antigo.csv  voos.csv
datasets/: malha_aerea.md  malha_aerea_codigos.csv  malha_aerea_codigos.md  voos.csv  voos.md  voos_processado.csv  voos_processado.md
distancia/: distancia.py
gerarlink/: criarendereco.py  flights_impl.py
raw_data/: AEP-SABE_Aeroparque__GIG-SBGL_Galeão.html  AEP-SABE_Aeroparque__POA-SBPA_Porto_Alegre.html  AJU-SBAR_Aracaju__GIG-SBGL_Galeão.html  AJU-SBAR_Aracaju__GRU-SBGR_Guarulhos.html  AJU-SBAR_Aracaju__SSA-SBSV_Salvador.html  ARU-SBAU_Araçatuba__CGH-SBSP_Congonhas.html  ASU-SGAS_Assunção__GRU-SBGR_Guarulhos.html  BEL-SBBE_Belém__GIG-SBGL_Galeão.html  BEL-SBBE_Belém__GRU-SBGR_Guarulhos.html  BEL-SBBE_Belém__MCP-SBMQ_Macapá.html  BEL-SBBE_Belém__STM-SBSN_Santarém.html  BOG-SKBO_Bogotá__BSB-SBBR_Brasília.html  BPS-SBPS_Porto_Seguro__CNF-SBCF_Confins.html  BSB-SBBR_Brasília__AEP-SABE_Aeroparque.html  BSB-SBBR_Brasília__BOG-SKBO_Bogotá.html  BSB-SBBR_Brasília__BVB-SBBV_Boa_Vista.html  BSB-SBBR_Brasília__CGB-SBCY_Cuiabá.html  BSB-SBBR_Brasília__FLN-SBFL_Florianópolis.html  BSB-SBBR_Brasília__GYN-SBGO_Goiânia.html  BSB-SBBR_Brasília__JPA-SBJP_João_Pessoa.html  BSB-SBBR_Brasília__MAB-SBMA_Marabá.html  BSB-SBBR_Brasília__MCO-KMCO_Orlando.html  BSB-SBBR_Brasília__MIA-KMIA_Miami.html  BSB-SBBR_Brasília__NAT-SBSG_Natal.html  BSB-SBBR_Brasília__PMW-SBPJ_Palmas.html  (+123 more)
