[project]
name = "distvsprice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "pandas>=2.3.0",
    "playwright>=1.52.0",
    "protobuf>=6.31.1",
    "requests>=2.32.4",
    "selectolax>=0.3.30",
]
